--- a/index.html
+++ b/index.html
@@ -2,14 +2,35 @@
 <html>
   <head>
     <meta charset="utf-8" />
+     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Checklist construction</title>
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
-    <header>
+    <header class="container">
       <h1>Checklist Construction</h1>
     </header>
-    <main>
-      <form>
+    <main class="container">
+      <form method="post" action="/api/SaveChecklist">
+	<h2>Données de base</h2>
+
+	<div class="form-group">
+	  <label for="nameOfConstruction">Nom de la construction</label>
+	  <input type="text" class="form-control" id="nameOfConstruction" />
+	</div>
+
+	<div class="form-group">
+	  <label for="date">Date du contrôle</label>
+	  <input type="date" class="form-control" id="date" />
+	</div>
+
+	<div class="form-group">
+	  <label for="mailAddress">Adresse mail de la personne ayant fait le contrôle</label>
+	  <input type="email" class="form-control" id="mailAddress" />
+	</div>
+
+	<button type="submit" class="btn btn-primary mb-2">Envoyer</button>
       </form>
     </main>
   </body>
