--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 	<div class="form-group">
 	  <label for="nameOfConstruction">Nom de la construction</label>
-	  <input type="text" class="form-control" id="nameOfConstruction" />
+	  <input type="text" class="form-control" id="nameOfConstruction" required />
 	</div>
 
 	<div class="form-group">
 	  <label for="date">Date du contrôle</label>
-	  <input type="date" class="form-control" id="date" />
+	  <input type="date" class="form-control" id="date" required />
 	</div>
 
 	<div class="form-group">
 	  <label for="mailAddress">Adresse mail de la personne ayant fait le contrôle</label>
-	  <input type="email" class="form-control" id="mailAddress" />
+	  <input type="email" class="form-control" id="mailAddress" required />
 	</div>
 
 	<button type="submit" class="btn btn-primary mb-2">Envoyer</button>
