--- a/index.html
+++ b/index.html
@@ -30,7 +30,25 @@
 	  <input type="email" class="form-control" id="mailAddress" required />
 	</div>
 
-	<button type="submit" class="btn btn-primary mb-2">Envoyer</button>
+	<h2>État général de l'abri</h2>
+	<h3>Éclairage (Changement ampoules et Néons)</h3>
+	  <div class="form-check form-check-inline">
+	    <input class="form-check-input" type="radio" name="illumination" id="illuminationOK" value="ok">
+	    <label class="form-check-label" for="illuminationOK">OK</label>
+	  </div>
+	  <div class="form-check form-check-inline">
+	    <input class="form-check-input" type="radio" name="illumination" id="illuminationToRepair" value="torepair">
+	    <label class="form-check-label" for="illuminationToRepair">à réparer</label>
+	  </div>
+	  <div class="form-group">
+	    <label for="illuminationPhoto">Photo:</label>
+	    <input type="file" class="form-control-file" id="illuminationPhoto">
+	    <label for="illuminationComments">Commentaires</label>
+	    <textarea class="form-control" name="illuminationComments"></textarea>
+	  </div>
+	  <div class="form-group">
+	    <button type="submit" class="btn btn-primary mb-2">Envoyer</button>
+	  </div>
       </form>
     </main>
   </body>
