--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>Checklist Construction</h1>
     </header>
     <main class="container">
-      <form method="post" action="/api/SaveChecklist">
+      <form method="post" action="/api/SaveChecklist" enctype="multipart/form-data">
 	<h2>Données de base</h2>
 
 	<div class="form-group">
