--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 
 	<div class="form-group">
 	  <label for="nameOfConstruction">Nom de la construction</label>
-	  <input type="text" class="form-control" id="nameOfConstruction" required />
+	  <input type="text" class="form-control" id="nameOfConstruction" name="nameOfConstruction" required />
 	</div>
 
 	<div class="form-group">
 	  <label for="date">Date du contrôle</label>
-	  <input type="date" class="form-control" id="date" required />
+	  <input type="date" class="form-control" id="date" name="date" required />
 	</div>
 
 	<div class="form-group">
 	  <label for="mailAddress">Adresse mail de la personne ayant fait le contrôle</label>
-	  <input type="email" class="form-control" id="mailAddress" required />
+	  <input type="email" class="form-control" id="mailAddress" name="mailAddress" required />
 	</div>
 
 	<h2>État général de l'abri</h2>
