Camera by default

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="illuminationPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="illuminationPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="illuminationPhoto">
 	    <label for="illuminationComments">Commentaires</label>
 	    <textarea class="form-control" name="illuminationComments"></textarea>
 	  </div>
@@ -59,7 +59,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="hygrometriePhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="hygrometriePhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="hygrometriePhoto">
 	    <label for="hygrometrieComments">Commentaires</label>
 	    <textarea class="form-control" name="hygrometrieComments"></textarea>
 	  </div>
@@ -75,7 +75,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="kitchenPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="kitchenPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="kitchenPhoto">
 	    <label for="kitchenComments">Commentaires</label>
 	    <textarea class="form-control" name="kitchenComments"></textarea>
 	  </div>
@@ -91,7 +91,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="waterPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="waterPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="waterPhoto">
 	    <label for="waterComments">Commentaires</label>
 	    <textarea class="form-control" name="waterComments"></textarea>
 	  </div>
@@ -107,7 +107,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="accessPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="accessPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="accessPhoto">
 	    <label for="accessComments">Commentaires</label>
 	    <textarea class="form-control" name="accessComments"></textarea>
 	  </div>
@@ -123,7 +123,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="floorPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="floorPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="floorPhoto">
 	    <label for="floorComments">Commentaires</label>
 	    <textarea class="form-control" name="floorComments"></textarea>
 	  </div>
@@ -139,7 +139,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="generatorPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="generatorPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="generatorPhoto">
 	    <label for="generatorComments">Commentaires</label>
 	    <textarea class="form-control" name="generatorComments"></textarea>
 	  </div>
@@ -155,7 +155,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="controllistPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="controllistPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="controllistPhoto">
 	    <label for="controllistComments">Commentaires</label>
 	    <textarea class="form-control" name="controllistComments"></textarea>
 	  </div>
@@ -171,7 +171,7 @@
 	  </div>
 	  <div class="form-group">
 	    <label for="dehumidifierPhoto">Photo:</label>
-	    <input type="file" class="form-control-file" id="dehumidifierPhoto">
+	    <input type="file" accept="image/*;capture=camera" class="form-control-file" id="dehumidifierPhoto">
 	    <label for="dehumidifierComments">Commentaires</label>
 	    <textarea class="form-control" name="dehumidifierComments"></textarea>
 	  </div>
