--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
     <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
+    <!-- Under the app dir -->
     <header class="container">
       <h1>Checklist Construction</h1>
     </header>
