--- a/app/index.html
+++ b/app/index.html
@@ -185,6 +185,17 @@
 	<script>
 		const searchParams = new URLSearchParams(location.search);
 		document.querySelector('#nameOfConstruction').value = searchParams.get('construction');
+		const d = new Date();
+		const year = d.getFullYear();
+		let month = '' + (d.getMonth() + 1);
+		if (month.length < 2) {
+			month = '0' + month;
+		}
+		let day = '' + d.getDate();
+		if (day.length < 2) {
+			day = '0' + day;
+		}
+		document.querySelector('#date').value = year + '-' + month + '-' + day;
 	</script>
   </body>
 </html>
