--- a/app/sortie.html
+++ b/app/sortie.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Sorti de la construction</h1>
-        <p>Vous pouvez fermer cette fenêtre maintenant.</p>
+        <p>Vous pouvez maintenant fermer cette fenêtre.</p>
         <script>
             let searchParams = new URLSearchParams(location.search);
             let construction = searchParams.get('construction');
