--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,11 @@
 	  <input type="email" class="form-control" id="mailAddress" name="mailAddress" required />
 	</div>
 
+	<div class="form-group">
+		<label for="secondMailAddress">Mail deuxième personne</label>
+		<input type="email" class="form-control" id="secondMailAddress" name="secondMailAddress" required />
+	  </div>
+
 	<h2>État général de l'abri</h2>
 	<h3>Éclairage (Changement ampoules et Néons)</h3>
 	  <div class="form-check form-check-inline">
