--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,11 @@
 	</div>
 
 	<div class="form-group">
+		<label for="accessCode">Code d'accès</label>
+		<input type="text" class="form-control" id="accessCode" name="accessCode" required />
+	</div>
+
+	<div class="form-group">
 	  <label for="date">Date du contrôle</label>
 	  <input type="date" class="form-control" id="date" name="date" required />
 	</div>
@@ -249,6 +254,8 @@
 			day = '0' + day;
 		}
 		document.querySelector('#date').value = year + '-' + month + '-' + day;
+		const accessCodeInput = document.querySelector('#accessCode');
+		console.log(accessCodeInput);
 	</script>
   </body>
 </html>
