--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Checklist construction</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
+	<script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
   </head>
   <body>
