--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 			border: 5px solid green;
 		}
 		.valid-access-code::after {
-			content: '✅'
+			content: '\xe2\x9c\x85'
 		}
 		.invalid-access-code {
 			border: 5px solid red;
