--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
 		.invalid-access-code {
 			border: 3px solid red;
 		}
+		.access-code-ok {
+			color: green;
+		}
 	</style>
   </head>
   <body>
@@ -33,7 +36,7 @@
 	<div class="form-group">
 		<label for="accessCode">Code d'accès</label>
 		<input type="number" class="form-control" id="accessCode" name="accessCode" required />
-		<span class="access-code-ok" style="display: none">✅</span>
+		<span class="access-code-ok" style="display: none">✅ code correct</span>
 	</div>
 
 	<div class="form-group">
