--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 
 	<div class="form-group">
 		<label for="accessCode">Code d'accès</label>
-		<input type="number" min="0" max="100000" class="form-control" id="accessCode" name="accessCode" required />
+		<input type="number" min="0" max="100000" pattern="[0-9]*" class="form-control" id="accessCode" name="accessCode" required />
 		<span class="access-code-ok" style="display: none">✅ code correct</span>
 	</div>
 
