Multiple photo upload

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="illuminationPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="illuminationPhoto" name="illuminationPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="illuminationPhoto" name="illuminationPhoto" multiple="multiple">
 			<label for="illuminationComments">Commentaires</label>
 			<textarea class="form-control" name="illuminationComments"></textarea>
 		  </div>
@@ -84,7 +84,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="hygrometriePhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="hygrometriePhoto" name="hygrometriePhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="hygrometriePhoto" name="hygrometriePhoto"  multiple="multiple">
 			<label for="hygrometrieComments">Commentaires</label>
 			<textarea class="form-control" name="hygrometrieComments"></textarea>
 		  </div>
@@ -100,7 +100,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="kitchenPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="kitchenPhoto" name="kitchenPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="kitchenPhoto" name="kitchenPhoto" multiple="multiple">
 			<label for="kitchenComments">Commentaires</label>
 			<textarea class="form-control" name="kitchenComments"></textarea>
 		  </div>
@@ -116,7 +116,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="waterPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="waterPhoto" name="waterPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="waterPhoto" name="waterPhoto" multiple="multiple">
 			<label for="waterComments">Commentaires</label>
 			<textarea class="form-control" name="waterComments"></textarea>
 		  </div>
@@ -132,7 +132,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="accessPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="accessPhoto" name="accessPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="accessPhoto" name="accessPhoto" multiple="multiple">
 			<label for="accessComments">Commentaires</label>
 			<textarea class="form-control" name="accessComments"></textarea>
 		  </div>
@@ -148,7 +148,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="floorPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="floorPhoto" name="floorPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="floorPhoto" name="floorPhoto" multiple="multiple">
 			<label for="floorComments">Commentaires</label>
 			<textarea class="form-control" name="floorComments"></textarea>
 		  </div>
@@ -164,7 +164,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="generatorPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="generatorPhoto" name="generatorPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="generatorPhoto" name="generatorPhoto" multiple="multiple">
 			<label for="generatorComments">Commentaires</label>
 			<textarea class="form-control" name="generatorComments"></textarea>
 		  </div>
@@ -180,7 +180,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="controllistPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="controllistPhoto" name="controllistPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="controllistPhoto" name="controllistPhoto" multiple="multiple">
 			<label for="controllistComments">Commentaires</label>
 			<textarea class="form-control" name="controllistComments"></textarea>
 		  </div>
@@ -196,7 +196,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="dehumidifierPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="dehumidifierPhoto" name="dehumidifierPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="dehumidifierPhoto" name="dehumidifierPhoto" multiple="multiple">
 			<label for="dehumidifierComments">Commentaires</label>
 			<textarea class="form-control" name="dehumidifierComments"></textarea>
 		  </div>
@@ -212,7 +212,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="gifasPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="gifasPhoto" name="gifasPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="gifasPhoto" name="gifasPhoto" multiple="multiple">
 			<label for="gifasComments">Commentaires</label>
 			<textarea class="form-control" name="gifasComments"></textarea>
 		  </div>
@@ -228,7 +228,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="enveloppePhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="enveloppePhoto" name="enveloppePhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="enveloppePhoto" name="enveloppePhoto" multiple="multiple">
 			<label for="enveloppeComments">Commentaires</label>
 			<textarea class="form-control" name="enveloppeComments"></textarea>
 		  </div>
@@ -244,7 +244,7 @@
 		  </div>
 		  <div class="form-group">
 			<label for="jointsPhoto">Photo:</label>
-			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="jointsPhoto" name="jointsPhoto">
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="jointsPhoto" name="jointsPhoto" multiple="multiple">
 			<label for="jointsComments">Commentaires</label>
 			<textarea class="form-control" name="jointsComments"></textarea>
 		  </div>
