--- a/app/index.html
+++ b/app/index.html
@@ -248,6 +248,22 @@
 			<label for="jointsComments">Commentaires</label>
 			<textarea class="form-control" name="jointsComments"></textarea>
 		  </div>
+
+		  <h3>Contrôler les Chaussettes</h3>
+		  <div class="form-check form-check-inline">
+			<input class="form-check-input" type="radio" name="chaussette" id="chaussetteOK" value="ok">
+			<label class="form-check-label" for="chaussetteOK">OK</label>
+		  </div>
+		  <div class="form-check form-check-inline">
+			<input class="form-check-input" type="radio" name="chaussette" id="chaussetteToRepair" value="torepair">
+			<label class="form-check-label" for="chaussetteToRepair">à réparer</label>
+		  </div>
+		  <div class="form-group">
+			<label for="chaussettePhoto">Photo:</label>
+			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="chaussettePhoto" name="chaussettePhoto" multiple="multiple">
+			<label for="chaussetteComments">Commentaires</label>
+			<textarea class="form-control" name="chaussetteComments"></textarea>
+		  </div>
 		  
 		  <div class="form-group">
 			<button type="submit" class="btn btn-primary mb-2">Envoyer</button>
