Adding place to set photo info

--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
 		  <div class="form-group">
 			<label for="illuminationPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="illuminationPhoto" name="illuminationPhoto" multiple="multiple">
+			<span class="illumination-photo-info photo-info"></span>
 			<label for="illuminationComments">Commentaires</label>
 			<textarea class="form-control" name="illuminationComments"></textarea>
 		  </div>
@@ -85,6 +86,7 @@
 		  <div class="form-group">
 			<label for="hygrometriePhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="hygrometriePhoto" name="hygrometriePhoto"  multiple="multiple">
+			<span class="hygrometrie-photo-info photo-info"></span>
 			<label for="hygrometrieComments">Commentaires</label>
 			<textarea class="form-control" name="hygrometrieComments"></textarea>
 		  </div>
@@ -101,6 +103,7 @@
 		  <div class="form-group">
 			<label for="kitchenPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="kitchenPhoto" name="kitchenPhoto" multiple="multiple">
+			<span class="kitchen-photo-info photo-info"></span>
 			<label for="kitchenComments">Commentaires</label>
 			<textarea class="form-control" name="kitchenComments"></textarea>
 		  </div>
@@ -117,6 +120,7 @@
 		  <div class="form-group">
 			<label for="waterPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="waterPhoto" name="waterPhoto" multiple="multiple">
+			<span class="water-photo-info photo-info"></span>
 			<label for="waterComments">Commentaires</label>
 			<textarea class="form-control" name="waterComments"></textarea>
 		  </div>
@@ -133,6 +137,7 @@
 		  <div class="form-group">
 			<label for="accessPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="accessPhoto" name="accessPhoto" multiple="multiple">
+			<span class="access-photo-info photo-info"></span>
 			<label for="accessComments">Commentaires</label>
 			<textarea class="form-control" name="accessComments"></textarea>
 		  </div>
@@ -149,6 +154,7 @@
 		  <div class="form-group">
 			<label for="floorPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="floorPhoto" name="floorPhoto" multiple="multiple">
+			<span class="floor-photo-info photo-info"></span>
 			<label for="floorComments">Commentaires</label>
 			<textarea class="form-control" name="floorComments"></textarea>
 		  </div>
@@ -165,6 +171,7 @@
 		  <div class="form-group">
 			<label for="generatorPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="generatorPhoto" name="generatorPhoto" multiple="multiple">
+			<span class="generator-photo-info photo-info"></span>
 			<label for="generatorComments">Commentaires</label>
 			<textarea class="form-control" name="generatorComments"></textarea>
 		  </div>
@@ -181,6 +188,7 @@
 		  <div class="form-group">
 			<label for="controllistPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="controllistPhoto" name="controllistPhoto" multiple="multiple">
+			<span class="controllist-photo-info photo-info"></span>
 			<label for="controllistComments">Commentaires</label>
 			<textarea class="form-control" name="controllistComments"></textarea>
 		  </div>
@@ -197,6 +205,7 @@
 		  <div class="form-group">
 			<label for="dehumidifierPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="dehumidifierPhoto" name="dehumidifierPhoto" multiple="multiple">
+			<span class="dehumidifier-photo-info photo-info"></span>
 			<label for="dehumidifierComments">Commentaires</label>
 			<textarea class="form-control" name="dehumidifierComments"></textarea>
 		  </div>
@@ -213,6 +222,7 @@
 		  <div class="form-group">
 			<label for="gifasPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="gifasPhoto" name="gifasPhoto" multiple="multiple">
+			<span class="gifas-photo-info photo-info"></span>
 			<label for="gifasComments">Commentaires</label>
 			<textarea class="form-control" name="gifasComments"></textarea>
 		  </div>
@@ -229,6 +239,7 @@
 		  <div class="form-group">
 			<label for="enveloppePhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="enveloppePhoto" name="enveloppePhoto" multiple="multiple">
+			<span class="enveloppe-photo-info photo-info"></span>
 			<label for="enveloppeComments">Commentaires</label>
 			<textarea class="form-control" name="enveloppeComments"></textarea>
 		  </div>
@@ -245,6 +256,7 @@
 		  <div class="form-group">
 			<label for="jointsPhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="jointsPhoto" name="jointsPhoto" multiple="multiple">
+			<span class="joints-photo-info photo-info"></span>
 			<label for="jointsComments">Commentaires</label>
 			<textarea class="form-control" name="jointsComments"></textarea>
 		  </div>
@@ -261,6 +273,7 @@
 		  <div class="form-group">
 			<label for="chaussettePhoto">Photo:</label>
 			<input type="file" accept="image/*;capture=camera" class="form-control-file" id="chaussettePhoto" name="chaussettePhoto" multiple="multiple">
+			<span class="chaussette-photo-info photo-info"></span>
 			<label for="chaussetteComments">Commentaires</label>
 			<textarea class="form-control" name="chaussetteComments"></textarea>
 		  </div>
