--- a/app/liste.html
+++ b/app/liste.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 	<script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <style>
+      .checklist-table tr:hover {
+        background-color: aliceblue;
+      }
+    </style>
 	<style>
 		
 	</style>
