--- a/app/liste.html
+++ b/app/liste.html
@@ -11,6 +11,11 @@
       .checklist-table tr:hover {
         background-color: aliceblue;
       }
+
+      .checklist-table thead th {
+        position: sticky;
+        top: 0;
+      }
     </style>
 	<style>
 		
