Background color for sticky headers

--- a/app/liste.html
+++ b/app/liste.html
@@ -15,6 +15,7 @@
       .checklist-table thead th {
         position: sticky;
         top: 0;
+        background-color: white;
       }
     </style>
 	<style>
