--- a/app/liste.html
+++ b/app/liste.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Liste des dernières contrôles</title>
+    <title>Liste des derniers contrôles</title>
     <link rel="stylesheet" href="css/bootstrap.min.css" />
 	<script src="js/jquery-3.7.1.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
