--- a/app/details_control.html
+++ b/app/details_control.html
@@ -7,6 +7,14 @@
 <link rel="stylesheet" href="css/bootstrap.min.css" />
 <script src="js/jquery-3.7.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<style>
+    head {
+        margin-left: 0.5em;
+    }
+    main {
+        margin-left: 0.5em;
+    }
+</style>
 </head>
 <body>
     <head>
